--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -1,52 +1,169 @@
 <style>
-    .main {
-        text-align: center;
+    @media (max-width: 580px) {
+        .panel .blocks .block .text {
+            width: 100%;
+            float: none !important;
+            display: block;
+            padding: 5%;
+        }
+
+        .panel .blocks .block .media {
+            float: none !important;
+            display: block;
+            width: 100%;
+        }
+    }
+
+    @media (max-width: 980px) {
+        .panel {
+            padding: 75px 0;
+        }
+    }
+
+    .panel {
+        border: none;
+        box-shadow: none;
+        padding: 125px 0;
+    }
+
+    .blocks {
+        max-width: 900px;
+        background: #fff;
+        margin: 50px auto;
+        border-radius: 4px;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    .blocks .block {
+        border-bottom: 1px solid #dbdcdb;
+        height: 275px;
+        overflow: hidden;
+    }
+
+    .blocks .block .text {
+        padding: 50px;
+        width: 70%;
+        float: left;
+    }
+
+    .blocks .block.even .text {
+        float: right;
+    }
+
+    .blocks .block .text h2 {
+        font-size: 24px;
+        font-weight: 400;
+        color: #71ee6d;
+    }
+
+    .blocks .block .text p {
+        font-size: 13px;
+        color: #80878c;
+    }
+
+    .blocks .block .media {
+        float: right;
+        padding-top: 20px;
+        width: 40%;
+        overflow: hidden;
+    }
+
+    .blocks .block.even .media {
+        float: left;
     }
 </style>
 
-<div class="jumbotron">
-    <div class="container">
-        <h1>Green Auto Detail</h1>
+<!--<div class="jumbotron">-->
+<!--<div class="container">-->
+<!--<h1>Green Auto Detail</h1>-->
 
-        <p>Lorem Ipsum</p>
+<!--<p>Lorem Ipsum</p>-->
 
-        <p>
-            <a class="btn btn-primary btn-lg" href="#" data-toggle="modal" data-target="#quoteModal">Request Info</a>
-        </p>
-    </div>
-</div>
+<!--<p>-->
+<!--<a class="btn btn-primary btn-lg" href="#" data-toggle="modal" data-target="#quoteModal">Request Info</a>-->
+<!--</p>-->
+<!--</div>-->
+<!--</div>-->
 
-<div class="container main">
-    <div class="row">
-        <div class="col-xs-12 col-md-4">
-            <h2>The Experience</h2>
+<!--<div class="container">-->
+    <!--<div class="row">-->
 
-            <p>At Green Auto Detail we understand that your automobile deserves the best. This is why we are proud to be
-                a low volume, high quality detail shop. Our founder has twenty-four years of hands on auto
-                reconditioning experience. We have worked on everything from Buicks to Bentleys. Pride in our craft is
-                evident. You can see it in our work, on our walls and in our eyes. We truly love the art of auto
-                detailing. Give us a call or stop by the shop and you too will understand why your automobile deserves
-                the best.</p>
+        <div class="panel">
+            <div class="blocks">
+                <div class="block odd">
+                    <div class="text">
+                        <h2>The Experience</h2>
+
+                        <p>At Green Auto Detail we understand that your automobile deserves the best. This is why we are
+                            proud to be
+                            a low volume, high quality detail shop. Our founder has twenty-four years of hands on auto
+                            reconditioning experience. We have worked on everything from Buicks to Bentleys. Pride in
+                            our craft is
+                            evident. You can see it in our work, on our walls and in our eyes. We truly love the art of
+                            auto
+                            detailing. Give us a call or stop by the shop and you too will understand why your
+                            automobile deserves
+                            the best.</p>
+                    </div>
+                    <div class="media"></div>
+                </div>
+
+                <div class="block even">
+                    <div class="text">
+                        <h2>Why Green</h2>
+
+                        <p>It used to be that eco-friendly and auto detail were never used in the same sentence.
+                            Believe
+                            it
+                            or not,
+                            there are detail shops and dealerships that use harsh chemicals and solvents to clean
+                            interiors.
+                            This
+                            practice leaves behind products that gas off and can damage plastics and strip leather
+                            of
+                            its
+                            natural
+                            oils. Our specially formulated plastic and leather cleaner will clean and condition
+                            without
+                            harsh
+                            chemicals. Confidence in our process, equipment, products and service enables us to
+                            offer
+                            you a
+                            better
+                            clean.</p>
+                    </div>
+                    <div class="media"></div>
+                </div>
+
+                <div class="block odd">
+                    <div class="text">
+                        <h2>Convenience</h2>
+
+                        <p>Wax a man's car, his car will look great for six months. Teach a man to wax and his car
+                            can
+                            look
+                            great
+                            for a lifetime. At Green Auto Detail we know you don't always have time to care for your
+                            care
+                            like you
+                            really need to, but that's why we're here. In the time between, however, there are
+                            things
+                            you
+                            can do to
+                            keep your car looking great all year long. Learn from the master with instructional
+                            YouTube
+                            videos, join
+                            us on Facebook for tips and specials or e-mail us directly to set-up your very own
+                            detailing
+                            workshop!</p>
+                    </div>
+                    <div class="media"></div>
+                </div>
+            </div>
+            <!-- end blocks -->
         </div>
-        <div class="ol-xs-12 col-md-4">
-            <h2>Why Green</h2>
+        <!-- end panel-->
+    <!--</div>-->
+    <!-- end row -->
 
-            <p>It used to be that eco-friendly and auto detail were never used in the same sentence. Believe it or not,
-                there are detail shops and dealerships that use harsh chemicals and solvents to clean interiors. This
-                practice leaves behind products that gas off and can damage plastics and strip leather of its natural
-                oils. Our specially formulated plastic and leather cleaner will clean and condition without harsh
-                chemicals. Confidence in our process, equipment, products and service enables us to offer you a better
-                clean.</p>
-        </div>
-        <div class="ol-xs-12 col-md-4">
-            <h2>Convenience</h2>
-
-            <p>Wax a man's car, his car will look great for six months. Teach a man to wax and his car can look great
-                for a lifetime. At Green Auto Detail we know you don't always have time to care for your care like you
-                really need to, but that's why we're here. In the time between, however, there are things you can do to
-                keep your car looking great all year long. Learn from the master with instructional YouTube videos, join
-                us on Facebook for tips and specials or e-mail us directly to set-up your very own detailing
-                workshop!</p>
-        </div>
-    </div>
-</div>
+<!--</div>-->
