--- a/src/components/nav-bar/nav-bar.html
+++ b/src/components/nav-bar/nav-bar.html
@@ -1,9 +1,48 @@
-<!--
-  The navigation UI that is docked to the top of the window. Most of this markup simply
-  follows Bootstrap conventions. The only Knockout-specific parts are the data-bind
-  attributes on the <li> elements.
--->
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+<style>
+    .navbar-green {
+        height: 90px;
+        width: 100%;
+        border-bottom: 1px solid #dee0df;
+        background-color: #ffffff;
+    }
+
+    .navbar-default .navbar-nav > li > a {
+        color: #a3a3a3;
+    }
+
+    .navbar-default .navbar-nav > .active > a {
+        color: #71ee6d;
+        background-color: transparent;
+
+    }
+
+    .navbar-default .nav > li > a:hover,
+    .navbar-default .nav > .active > a:hover,
+    .navbar-default .nav > li > a:focus {
+        color: #71ee6d;
+        background-color: transparent;
+
+    }
+
+    .navbar-default .navbar-collapse {
+        padding: 20px 0;
+    }
+
+    @media (max-width: 767px) {
+        .navbar-green {
+            height: 50px;
+        }
+
+        .navbar-default .navbar-collapse {
+            padding: 0 15px 0 15px;
+            background-color: #fff;
+            box-shadow: #dee0df 0 1px 2px;
+        }
+    }
+
+
+</style>
+<div class="navbar navbar-default navbar-fixed-top navbar-green" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -15,8 +54,7 @@
             <a class="navbar-brand" href="#">Green Auto Detail</a>
         </div>
         <div class="collapse navbar-collapse">
-
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-right">
                 <li data-bind="css: { active: route().page === 'home-page' }">
                     <a href="#">Home</a>
                 </li>
@@ -28,9 +66,9 @@
                 <li data-bind="css: { active: route().page === 'gallery-page' }">
                     <a href="#gallery">Gallery</a>
                 </li>
-            </ul>
+                <!--</ul>-->
 
-            <ul class="nav navbar-nav navbar-right">
+                <!--<ul class="nav navbar-nav navbar-right">-->
                 <li>
                     <a href="#" data-toggle="modal" data-target="#quoteModal">Request Info</a>
                 </li>
