--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,20 @@
 #page {
-    margin-top: 80px;
+    margin-top: 140px;
     margin-bottom: 100px;
+    padding: 0;
+    min-height: 600px;
+}
+
+@media (max-width: 767px){
+    #page {
+        margin-top: 80px;
+    }
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
 }
