--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -71,99 +71,109 @@
     .blocks .block.even .media {
         float: left;
     }
+
+    .title-wrapper {
+        text-align: center;
+        padding: 0 20px;
+    }
+
+    .title-wrapper h1 {
+        color: #525252;
+        font-weight: 200;
+        margin: 0.67em 0
+    }
+
+    .title-wrapper p {
+        color: #aeaeae;
+        font-weight: 100;
+        font-size: 21px;
+    }
 </style>
 
-<!--<div class="jumbotron">-->
-<!--<div class="container">-->
-<!--<h1>Green Auto Detail</h1>-->
+<div class="row">
 
-<!--<p>Lorem Ipsum</p>-->
+    <div class="title-wrapper">
+        <h1>Love the environment? We do too.</h1>
 
-<!--<p>-->
-<!--<a class="btn btn-primary btn-lg" href="#" data-toggle="modal" data-target="#quoteModal">Request Info</a>-->
-<!--</p>-->
-<!--</div>-->
-<!--</div>-->
+        <p>You don't have to compromise between being green and being clean.</p>
+    </div>
 
-<!--<div class="container">-->
-    <!--<div class="row">-->
+    <div class="panel">
+        <div class="blocks">
+            <div class="block odd">
+                <div class="text">
+                    <h2>The Experience</h2>
 
-        <div class="panel">
-            <div class="blocks">
-                <div class="block odd">
-                    <div class="text">
-                        <h2>The Experience</h2>
-
-                        <p>At Green Auto Detail we understand that your automobile deserves the best. This is why we are
-                            proud to be
-                            a low volume, high quality detail shop. Our founder has twenty-four years of hands on auto
-                            reconditioning experience. We have worked on everything from Buicks to Bentleys. Pride in
-                            our craft is
-                            evident. You can see it in our work, on our walls and in our eyes. We truly love the art of
-                            auto
-                            detailing. Give us a call or stop by the shop and you too will understand why your
-                            automobile deserves
-                            the best.</p>
-                    </div>
-                    <div class="media"></div>
+                    <p>At Green Auto Detail we understand that your automobile deserves the best. This is why we are
+                        proud to be
+                        a low volume, high quality detail shop. Our founder has twenty-four years of hands on auto
+                        reconditioning experience. We have worked on everything from Buicks to Bentleys. Pride in
+                        our craft is
+                        evident. You can see it in our work, on our walls and in our eyes. We truly love the art of
+                        auto
+                        detailing. Give us a call or stop by the shop and you too will understand why your
+                        automobile deserves
+                        the best.</p>
                 </div>
-
-                <div class="block even">
-                    <div class="text">
-                        <h2>Why Green</h2>
-
-                        <p>It used to be that eco-friendly and auto detail were never used in the same sentence.
-                            Believe
-                            it
-                            or not,
-                            there are detail shops and dealerships that use harsh chemicals and solvents to clean
-                            interiors.
-                            This
-                            practice leaves behind products that gas off and can damage plastics and strip leather
-                            of
-                            its
-                            natural
-                            oils. Our specially formulated plastic and leather cleaner will clean and condition
-                            without
-                            harsh
-                            chemicals. Confidence in our process, equipment, products and service enables us to
-                            offer
-                            you a
-                            better
-                            clean.</p>
-                    </div>
-                    <div class="media"></div>
-                </div>
-
-                <div class="block odd">
-                    <div class="text">
-                        <h2>Convenience</h2>
-
-                        <p>Wax a man's car, his car will look great for six months. Teach a man to wax and his car
-                            can
-                            look
-                            great
-                            for a lifetime. At Green Auto Detail we know you don't always have time to care for your
-                            care
-                            like you
-                            really need to, but that's why we're here. In the time between, however, there are
-                            things
-                            you
-                            can do to
-                            keep your car looking great all year long. Learn from the master with instructional
-                            YouTube
-                            videos, join
-                            us on Facebook for tips and specials or e-mail us directly to set-up your very own
-                            detailing
-                            workshop!</p>
-                    </div>
-                    <div class="media"></div>
-                </div>
+                <div class="media"></div>
             </div>
-            <!-- end blocks -->
+
+            <div class="block even">
+                <div class="text">
+                    <h2>Why Green</h2>
+
+                    <p>It used to be that eco-friendly and auto detail were never used in the same sentence.
+                        Believe
+                        it
+                        or not,
+                        there are detail shops and dealerships that use harsh chemicals and solvents to clean
+                        interiors.
+                        This
+                        practice leaves behind products that gas off and can damage plastics and strip leather
+                        of
+                        its
+                        natural
+                        oils. Our specially formulated plastic and leather cleaner will clean and condition
+                        without
+                        harsh
+                        chemicals. Confidence in our process, equipment, products and service enables us to
+                        offer
+                        you a
+                        better
+                        clean.</p>
+                </div>
+                <div class="media"></div>
+            </div>
+
+            <div class="block odd">
+                <div class="text">
+                    <h2>Convenience</h2>
+
+                    <p>Wax a man's car, his car will look great for six months. Teach a man to wax and his car
+                        can
+                        look
+                        great
+                        for a lifetime. At Green Auto Detail we know you don't always have time to care for your
+                        care
+                        like you
+                        really need to, but that's why we're here. In the time between, however, there are
+                        things
+                        you
+                        can do to
+                        keep your car looking great all year long. Learn from the master with instructional
+                        YouTube
+                        videos, join
+                        us on Facebook for tips and specials or e-mail us directly to set-up your very own
+                        detailing
+                        workshop!</p>
+                </div>
+                <div class="media"></div>
+            </div>
         </div>
-        <!-- end panel-->
-    <!--</div>-->
-    <!-- end row -->
+        <!-- end blocks -->
+    </div>
+    <!-- end panel-->
+</div>
+<!-- end row -->
 
 <!--</div>-->
