--- a/src/components/nav-bar/nav-bar.html
+++ b/src/components/nav-bar/nav-bar.html
@@ -3,6 +3,7 @@
         height: 90px;
         width: 100%;
         border-bottom: 1px solid #dee0df;
+        /* box-shadow: lightgray 1px 0px 3px; */
         background-color: #ffffff;
     }
 
@@ -10,10 +11,10 @@
         color: #a3a3a3;
     }
 
-    .navbar-default .navbar-nav > .active > a {
+    .navbar-default .navbar-nav > .active > a,
+    .navbar-default .navbar-nav > .active > a:focus {
         color: #71ee6d;
         background-color: transparent;
-
     }
 
     .navbar-default .nav > li > a:hover,
@@ -21,7 +22,6 @@
     .navbar-default .nav > li > a:focus {
         color: #71ee6d;
         background-color: transparent;
-
     }
 
     .navbar-default .navbar-collapse {
