--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@
     margin-top: 140px;
     margin-bottom: 100px;
     padding: 0;
-    /*min-height: 600px;*/
+    min-height: 600px;
 }
 
 @media (max-width: 767px){
