Updated styling and price changes

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -24,15 +24,18 @@
         font-size: 16px;
         color: #525252;
     }
+
     .footer > ul > li > a:hover {
         font-size: 16px;
-        color: #71ee6d;
+        color: #2cb34d;
     }
 
-    .footer p {
+    .footer p,
+    .footer p a {
         color: #aeaeae;
         font-size: 16px;
         margin-bottom: 10px;
+        font-weight: 300;
     }
 </style>
 
@@ -52,6 +55,7 @@
 
     <p>Mon-Fri 9:00am - 5:30pm<br/>
         Evenings and weekends by appointment<br/>
-        425-503-7743</p>
+        <a href="tel:4255037743">425-503-7743</a>
+    </p>
 
 </footer>
