--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -1,5 +1,9 @@
 <style>
     @media (max-width: 580px) {
+        .panel .blocks .block {
+            height: 410px;
+        }
+
         .panel .blocks .block .text {
             width: 100%;
             float: none !important;
@@ -11,6 +15,13 @@
             float: none !important;
             display: block;
             width: 100%;
+            padding-top: 0;
+        }
+
+        .panel .blocks .block .media img {
+            width: 90% !important;
+            float: none !important;
+            margin: 0 5% !important;
         }
     }
 
@@ -42,7 +53,7 @@
 
     .blocks .block .text {
         padding: 50px;
-        width: 70%;
+        width: 60%;
         float: left;
     }
 
@@ -51,9 +62,9 @@
     }
 
     .blocks .block .text h2 {
-        font-size: 24px;
-        font-weight: 400;
-        color: #71ee6d;
+        font-size: 20px;
+        font-weight: 300;
+        color: #2cb34d;
     }
 
     .blocks .block .text p {
@@ -79,14 +90,29 @@
 
     .title-wrapper h1 {
         color: #525252;
-        font-weight: 200;
+        font-weight: 100;
+        font-size: 52px;
         margin: 0.67em 0
     }
 
     .title-wrapper p {
         color: #aeaeae;
         font-weight: 100;
-        font-size: 21px;
+        font-size: 24px;
+    }
+
+    @media (max-width: 760px) {
+        .title-wrapper h1 {
+            font-size: 40px;
+        }
+
+        .title-wrapper p {
+            font-size: 18px;
+        }
+
+        .panel {
+            padding: 40px 0;
+        }
     }
 </style>
 
@@ -115,7 +141,9 @@
                         automobile deserves
                         the best.</p>
                 </div>
-                <div class="media"></div>
+                <div class="media">
+                    <img src="images/media1.jpg"/>
+                </div>
             </div>
 
             <div class="block even">
@@ -142,7 +170,9 @@
                         better
                         clean.</p>
                 </div>
-                <div class="media"></div>
+                <div class="media">
+                    <img src="images/media2.jpg"/>
+                </div>
             </div>
 
             <div class="block odd">
@@ -167,7 +197,9 @@
                         detailing
                         workshop!</p>
                 </div>
-                <div class="media"></div>
+                <div class="media">
+                    <img src="images/media3.jpg"/>
+                </div>
             </div>
         </div>
         <!-- end blocks -->
