--- a/src/components/services-page/services-page.html
+++ b/src/components/services-page/services-page.html
@@ -13,16 +13,16 @@
     }
 
     .service-wrapper h2 {
-        color: #42ee4a;
+        color: #2cb34d;
         font-size: 24px;
-        font-weight: 400;
+        font-weight: 200;
     }
 
     .service-wrapper h3 {
         margin-top: 0;
         color: #a3a3a3;
         font-size: 18px;
-        font-weight: 400;
+        font-weight: 200;
     }
 
     .service-wrapper .glyphicon {
@@ -37,11 +37,12 @@
 <script type="text/html" id="tile-template">
     <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="service-wrapper">
-            <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>
+            <!--<span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>-->
+            <img src="images/sprayIcon.png" />
 
             <h2 data-bind="text: $data.header"></h2>
 
-            <h3 data-bind="text: '$' + $data.price"></h3>
+            <h3 data-bind="text: $data.price"></h3>
 
             <p class="service-text" data-bind="text: $data.content"></p>
         </div>
