--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,11 +1,12 @@
 <style>
+
     .footer {
         bottom: 0;
         width: 100%;
         margin-top: 20px;
         margin-bottom: 0;
         background: #fafafa;
-        padding: 35px 20px;
+        padding: 20px;
         text-align: center
     }
 
@@ -25,9 +26,11 @@
         color: #525252;
     }
 
-    .footer > ul > li > a:hover {
+    .footer > ul > li > a:hover,
+    .footer > ul > li > a:focus {
         font-size: 16px;
         color: #2cb34d;
+        text-decoration: none;
     }
 
     .footer p,
