Fix for icon path. Update to work with mobile to remove horizontal scroll

--- a/src/components/services-page/services-page.html
+++ b/src/components/services-page/services-page.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="service-wrapper">
             <!--<span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>-->
-            <img src="images/sprayIcon.png"/>
+            <img class="service-icon" src="images/sprayIcon.png"/>
 
             <h2 data-bind="text: $data.header"></h2>
 
