--- a/src/components/home-page/home.html
+++ b/src/components/home-page/home.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row">
 
     <div class="title-wrapper">
@@ -89,5 +90,5 @@
     <!-- end panel-->
 </div>
 <!-- end row -->
-
+</div>
 <!--</div>-->
